Working version. Still buggy on narrow screens

--- a/style.css
+++ b/style.css
@@ -85,9 +85,13 @@ body {
 
 .footer {
   font-family: Oswald, sans-serif;
-  height: 13rem;
+  max-height: 13rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  /* grid-template-rows: fit-content; */
+  /* align-content: center;
+  justify-content: center; */
+
   /* display: flex;
 flex: 1 1 auto; */
   color: white;
@@ -102,7 +106,6 @@ flex: 1 1 auto; */
 
 .footer-item {
   background-color: rgba(166, 169, 240, 0.75);
-
   width: 100%;
   height: 100%;
   position: absolute;
@@ -121,7 +124,9 @@ flex: 1 1 auto; */
 }
 
 .footer-img {
-  max-width: 100%;
+  width: 100%;
+  /* overflow: hidden; */
+  object-fit: contain;
   /* min-height: 100%; */
   /* max-height: 450px; */
 }
